# qvec-type

./: README.md  qvec-type.cabal
app/: CurrentTestCase.hs  Defns.hs  Givens.hs  Main.hs  Records.hs  UomPluginTests.hs  Variants.hs  Wanteds.hs
docs/: WhyVectorSpace.md
src/: GHCAPI.hs
src/Data/: QVec.hs
src/Data/QVec/: Qu.hs
src/GHCAPI/: DetCmpType.hs
src/Plugin/: QVec.hs
src/Plugin/QVec/: Types.hs
