cabal-version: 2.4

name: qvec-type
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Nicolas Frisby
maintainer: nicolas.frisby@gmail.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:
    src

  exposed-modules:
    Data.QVec
    Data.QVec.Qu
    Plugin.QVec
    Plugin.QVec.Types

  other-modules:
    GHCAPI

  build-depends:
      base
    , ghc
    , containers

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors

executable smoke
  default-language: Haskell2010
  hs-source-dirs:
    app

  main-is: Main.hs
  other-modules:
    CurrentTestCase
    Defns
    Givens
    Wanteds

    UomPluginTests

  build-depends:
      base
    , dump-plugin
    , qvec-type

  default-extensions:
    DataKinds
    PolyKinds
    TypeOperators

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors

    -dcore-lint
    -fconstraint-solver-iterations=10
