cabal-version: 2.4

name: qvec-type
version: 0.1.0.0
stability: experimental

synopsis: Type-level vectors with rational coefficients

description:
  This package provides types built from the signature of a
  vector space with rational coefficients ("Data.QVec") and a
  typechecker plugin that implements their equational theory
  ("Plugin.QVec").

homepage: https://github.com/nfrisby/qvec-type
bug-reports: https://github.com/nfrisby/qvec-type/issues

license: BSD-3-Clause
license-file: LICENSE
author: Nicolas Frisby
maintainer: nicolas.frisby@gmail.com

category:
    Constraints
  ,
    Plugins
  ,
    Polymorphism
  ,
    Type System
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:
    src

  exposed-modules:
    Data.QVec
    Data.QVec.Qu
    Plugin.QVec
    Plugin.QVec.Types

  other-modules:
    GHCAPI

  build-depends:
      base
    , containers
    , ghc

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors

-- This smoke test passes if these modules successfully type check.
executable smoke
  default-language: Haskell2010
  hs-source-dirs:
    app

  main-is: Main.hs
  other-modules:
    CurrentTestCase
    Defns
    Givens
    Wanteds

    UomPluginTests

  build-depends:
      base
    , dump-plugin
    , qvec-type

  default-extensions:
    DataKinds
    PolyKinds
    TypeOperators

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors

    -dcore-lint
    -fconstraint-solver-iterations=10
